Покоритель баз данных

--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "npm": "8.19.2"
   },
   "dependencies": {
+    "@typegoose/typegoose": "9.13.2",
     "chalk": "^5.2.0",
-    "convict": "6.2.3",
+    "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "got": "12.5.3",
     "inversify": "6.0.1",
+    "mongoose": "6.7.2",
     "pino": "8.7.0",
     "reflect-metadata": "0.1.13"
   }
