--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/convict": "6.1.1",
     "@types/convict-format-with-validator": "6.0.2",
+    "@types/mime-types": "2.1.1",
+    "@types/multer": "1.4.7",
     "@types/node": "18.11.13",
     "@types/express": "4.17.14",
     "@typescript-eslint/eslint-plugin": "5.46.0",
@@ -53,7 +55,10 @@
     "got": "12.5.3",
     "http-status-codes": "2.2.0",
     "inversify": "6.0.1",
+    "mime-types": "2.1.35",
     "mongoose": "6.7.2",
+    "multer": "1.4.5-lts.1",
+    "nanoid": "4.0.0",
     "pino": "8.7.0",
     "reflect-metadata": "0.1.13"
   }
