--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mime-types": "2.1.1",
     "@types/multer": "1.4.7",
     "@types/node": "18.11.13",
+    "@types/cors": "2.8.13",
     "@types/express": "4.17.14",
     "@typescript-eslint/eslint-plugin": "5.46.0",
     "@typescript-eslint/parser": "5.46.0",
@@ -48,6 +49,7 @@
     "class-validator": "0.14.0",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
+    "cors": "2.8.5",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
     "express": "4.18.2",
